--- a/server2/Server2.ipynb
+++ b/server2/Server2.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.149.56\n"
+      "10.200.133.129\n"
      ]
     }
    ],
@@ -103,11 +103,11 @@
     "            #print(data[2])\n",
     "            lock.acquire()\n",
     "            dirname = data[2]\n",
-    "            user = data[1]\n",
-    "            if os.path.exists('files/'+user) == False:\n",
-    "                os.mkdir('files/'+user)\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname) == False:\n",
-    "                os.mkdir('files/'+user+\"/\"+dirname)\n",
+    "#             user = data[1]\n",
+    "#             if os.path.exists('files/'+user) == False:\n",
+    "#                 os.mkdir('files/'+user)\n",
+    "            if os.path.exists('files/'+dirname) == False:\n",
+    "                os.mkdir('files/'+dirname)\n",
     "            conn.send(\"ACK@Directory Created\".encode(encoding_format))\n",
     "            print(\"Directory Created: \"+dirname)\n",
     "            lock.release()\n",
@@ -118,11 +118,11 @@
     "        ############################################################\n",
     "        if operation.lower().strip() == \"createfile\":\n",
     "            lock.acquire()\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
     "            filename = data[3]\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname):\n",
-    "                open('files/'+user+\"/\"+dirname+\"/\"+filename, 'w').close()\n",
+    "            if os.path.exists('files/'+dirname):\n",
+    "                open('files/'+dirname+\"/\"+filename, 'w').close()\n",
     "                conn.send(\"ACK@File Created\".encode())\n",
     "                print(\"File Created: \"+filename)\n",
     "            else:\n",
@@ -137,13 +137,13 @@
     "        ########################################################\n",
     "        if operation.lower().strip() == \"deletefile\":\n",
     "            lock.acquire()\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname):\n",
-    "                if os.path.isdir('files/'+user+\"/\"+dirname):\n",
-    "                    shutil.rmtree('files/'+user+\"/\"+dirname)\n",
-    "                if os.path.isfile('files/'+user+\"/\"+dirname):    \n",
-    "                    os.remove('files/'+user+\"/\"+dirname)\n",
+    "            if os.path.exists('files/'+dirname):\n",
+    "                if os.path.isdir('files/'+dirname):\n",
+    "                    shutil.rmtree('files/'+dirname)\n",
+    "                if os.path.isfile('files/'+dirname):    \n",
+    "                    os.remove('files/'+dirname)\n",
     "                conn.send(\"ACK@Given file deleted\".encode())\n",
     "                print(\"Given file deleted: \"+dirname)\n",
     "            else:\n",
@@ -158,12 +158,12 @@
     "        #########################################################\n",
     "        if operation.lower().strip() == \"writefile\":\n",
     "            lock.acquire()\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
     "            filename = data[3]\n",
     "            encrypt = data[4]\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname+\"/\"+filename):\n",
-    "                f = open('files/'+user+\"/\"+dirname+\"/\"+filename, \"a\")\n",
+    "            if os.path.exists('files/'+dirname+\"/\"+filename):\n",
+    "                f = open('files/'+dirname+\"/\"+filename, \"a\")\n",
     "                f.write(encrypt)\n",
     "                f.close()\n",
     "                conn.send(\"ACK@file data saved at server\".encode())\n",
@@ -181,12 +181,12 @@
     "        ##########################################################\n",
     "        if operation.lower().strip() == \"renamefile\":\n",
     "            lock.acquire()\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
     "            oldname = data[3]\n",
     "            newname = data[4]\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname+\"/\"+oldname):\n",
-    "                os.rename('files/'+user+\"/\"+dirname+\"/\"+oldname,'files/'+user+\"/\"+dirname+\"/\"+newname)\n",
+    "            if os.path.exists('files/'+dirname+\"/\"+oldname):\n",
+    "                os.rename('files/'+dirname+\"/\"+oldname,'files/'+dirname+\"/\"+newname)\n",
     "                conn.send(\"ACK@file rename at server\".encode())\n",
     "                print(\"file rename at server: \"+newname)\n",
     "            else:\n",
@@ -199,10 +199,10 @@
     "        #This section will show the list of files in given directory\n",
     "        #############################################################\n",
     "        if operation.lower().strip() == \"listfiles\":\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            file_list = []\n",
     "            file_list.append(\"ACK@\")\n",
-    "            for root, dirs, directory in os.walk('files/'+user):\n",
+    "            for root, dirs, directory in os.walk('files/'):\n",
     "                for j in range(len(directory)):\n",
     "                    file_list.append(root+\"/\"+directory[j])\n",
     "            file_list = pickle.dumps(file_list)\n",
@@ -214,12 +214,12 @@
     "        #This section will read and display the content of a given file\n",
     "        ################################################################\n",
     "        if operation.lower().strip() == \"readfile\":\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
     "            filename = data[3]\n",
     "            features = {}\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname+\"/\"+filename):\n",
-    "                with open('files/'+user+\"/\"+dirname+\"/\"+filename) as f:\n",
+    "            if os.path.exists('files/'+dirname+\"/\"+filename):\n",
+    "                with open('files/'+dirname+\"/\"+filename) as f:\n",
     "                    dataset = f.read()\n",
     "                f.close()\n",
     "                features['status'] = \"correct\"\n",
@@ -311,6 +311,56 @@
      "text": [
       "Server listening upto 995 connections\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-8:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_10868/4174613175.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.133.129', 54759)\n",
+      "['writefile', 'dhruv', 'common', 'djp', 'Hi there']\n",
+      "writefile\n",
+      "Total Active connections 6\n",
+      "file data saved at server: djp\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_10868/4174613175.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.133.129', 60523)\n",
+      "['writefile', 'dhruv', 'common', 'djp', 'Hi this is Dhruv']\n",
+      "writefile\n",
+      "Total Active connections 6\n",
+      "file data saved at server: djp\n"
      ]
     }
    ],
