--- a/Client-dhruv.ipynb
+++ b/Client-dhruv.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "82bd05e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
     "import socket as c\n",
     "import pickle\n",
     "import json"
@@ -16,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "35510668",
    "metadata": {},
    "outputs": [
@@ -24,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.149.56\n"
+      "10.200.133.129\n"
      ]
     }
    ],
@@ -39,34 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "59e4f618",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validation = pd.DataFrame(pd.read_excel(\"validation.xlsx\"))\n",
-    "\n",
-    "#data.to_excel(\"validation.xlsx\", index_label=\"label\", merge_cells=False)\n",
-    "\n",
-    "# print(validation)\n",
-    "\n",
-    "# username = input()\n",
-    "# password = input()\n",
-    "# # print()\n",
-    "# for i in range(len(validation[\"username\"])):\n",
-    "#     if validation.loc[i][0] == username:\n",
-    "#         if validation.loc[i][1] == password:\n",
-    "#             print(\"Correct\")\n",
-    "#         else:\n",
-    "#             print(\"wrong password\")\n",
-    "#         break\n",
-    "# else:\n",
-    "#     print(username, \" not present\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "e9454d9a",
    "metadata": {},
    "outputs": [],
@@ -76,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "e2b0efa9",
    "metadata": {},
    "outputs": [],
@@ -104,6 +76,9 @@
     "#   Implementation of the CRUD operations.\n",
     "######################################################################\n",
     "\n",
+    "######################################\n",
+    "# Function to create the directory\n",
+    "######################################\n",
     "        \n",
     "        def createDirectory():\n",
     "            global username, dirname\n",
@@ -126,7 +101,10 @@
     "            data = data.decode(encoding_format)\n",
     "            print(data+\"\\n\")\n",
     "\n",
-    "\n",
+    "######################################\n",
+    "# Function to create file in Server\n",
+    "######################################\n",
+    "            \n",
     "        def createFile():\n",
     "\n",
     "            global username, dirname\n",
@@ -144,12 +122,15 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode(encoding_format)\n",
-    "            available_files.append(\"files/\"+username+\"/\"+dirname+\"/\"+filename)\n",
+    "            available_files.append(\"files/\"+dirname+\"/\"+filename)\n",
     "\n",
     "            client.send(features)\n",
     "            print(data+\"\\n\")                    \n",
     "\n",
-    "\n",
+    "######################################\n",
+    "# Function to write file in Server\n",
+    "######################################\n",
+    "            \n",
     "        def writeFile():\n",
     "\n",
     "            global username, text\n",
@@ -171,10 +152,12 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode()\n",
-    "            client.send(features)\n",
     "            print(data+\"\\n\")\n",
     "\n",
-    "\n",
+    "##################################\n",
+    "# Function to read file in Server\n",
+    "##################################\n",
+    "            \n",
     "        def readFile():\n",
     "            global username, dirname\n",
     "\n",
@@ -193,6 +176,7 @@
     "            rec = client.recv(client_buffer)\n",
     "            read_data = rec.decode()\n",
     "#                 if '@' not in read_data:\n",
+    "            result = []    \n",
     "            result = json.loads(read_data)\n",
     "            status = result['status']\n",
     "#                 request = None\n",
@@ -207,7 +191,11 @@
     "                print(\"File Contenet ended here=================================\")\n",
     "            else:\n",
     "                print(\"Given file does not exists\\n\")\n",
-    "\n",
+    "                \n",
+    "######################################\n",
+    "# Function to delete file in Server\n",
+    "######################################\n",
+    "                \n",
     "        def deleteFile():\n",
     "\n",
     "            global username, dirname\n",
@@ -220,6 +208,7 @@
     "            features.append(\"deletefile\")\n",
     "            features.append(username)\n",
     "            features.append(dirname+\"/\"+filename)\n",
+    "            features.append(filename)\n",
     "            features = pickle.dumps(features)\n",
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
@@ -232,8 +221,12 @@
     "                    if arr[3] == filename:\n",
     "                        del available_files[i]\n",
     "            print(data+\"\\n\")\n",
+    "            \n",
     "\n",
-    "\n",
+    "####################################\n",
+    "# Function to rename file in Server\n",
+    "####################################\n",
+    "            \n",
     "        def renameFile():\n",
     "\n",
     "            global username, text\n",
@@ -262,9 +255,12 @@
     "                arr = names.split(\"/\")\n",
     "                if arr[3] == oldname:\n",
     "                    del available_files[i]\n",
-    "            available_files.append('files/'+username+\"/\"+dirname+\"/\"+newname)        \n",
+    "            available_files.append('files/'+dirname+\"/\"+newname)        \n",
     "            print(data+\"\\n\")\n",
     "\n",
+    "#################################            \n",
+    "# Function to list file in Server\n",
+    "#################################\n",
     "\n",
     "        def listFiles():\n",
     "            print(\"\\nAvailable files for this user: \"+username+\"\\n\\n\")\n",
@@ -291,6 +287,7 @@
     "###############################################################################                    \n",
     "# The below are the operations that client can select and implement in server. \n",
     "###############################################################################\n",
+    "\n",
     "        def showmenu():\n",
     "            while True:\n",
     "                print(\"Hello There!\")\n",
@@ -300,112 +297,81 @@
     "                data = data.split(\" \")\n",
     "                operation = data[0]\n",
     "\n",
+    "                # write help to get the list of all option that you can perform on server\n",
     "                if operation.lower().strip() == \"help\":\n",
     "                    client.send(operation.encode())\n",
-    "\n",
+    "                \n",
+    "                # Write createdir to run create directory operation\n",
     "                elif operation.lower().strip() == \"createdir\":\n",
     "                    createDirectory()\n",
-    "\n",
+    "                \n",
+    "                # Write createfile to run create file operation\n",
     "                elif operation.lower().strip() == \"createfile\":\n",
     "                    createFile()\n",
-    "\n",
+    "                \n",
+    "                # Write writefile to run write file operation\n",
     "                elif operation.lower().strip() == \"writefile\":\n",
     "                    writeFile()\n",
-    "\n",
+    "                \n",
+    "                # Write readfile to run read file operation\n",
     "                elif operation.lower().strip() == \"readfile\":\n",
     "                    readFile()\n",
-    "\n",
+    "                \n",
+    "                # Write deletefile to run delete file operation\n",
     "                elif operation.lower().strip() == \"deletefile\":\n",
     "                    deleteFile()\n",
     "\n",
+    "                # Write renamefile to run rename file operation\n",
     "                elif operation.lower().strip() == \"renamefile\":\n",
     "                    renameFile()\n",
-    "\n",
+    "                    \n",
+    "                # Write listfile to run list file operation\n",
     "                elif operation.lower().strip() == \"listfile\":\n",
     "                    listFiles()\n",
-    "\n",
-    "    #             elif operation.lower().strip() == \"create\":\n",
-    "    #                 client.send(operation.encode())\n",
-    "\n",
-    "    #             elif operation.lower().strip() == \"read\":\n",
-    "    #                 client.send(operation.encode())\n",
-    "\n",
+    "                    \n",
+    "                #  Write logout to get disconnect from the server\n",
     "                elif operation.lower().strip() == \"logout\":\n",
     "                    client.send(operation.encode())\n",
     "                    break\n",
-    "                    \n",
-    "#         def readFiles():\n",
-    "#             global username, available_files\n",
-    "#             if len(available_files) > 0:\n",
-    "#                 available_files.clear()\n",
-    "# #             client = socket.socket(socket.AF_INET, socket.SOCK_STREAM) \n",
-    "# #             client.connect(('localhost', 2222))\n",
-    "#             features = []\n",
-    "#             features.append(\"listfiles\")\n",
-    "#             features.append(username)\n",
-    "#             features = pickle.dumps(features)\n",
-    "#             client.send(features)\n",
-    "#             data = client.recv(10000)\n",
-    "#             data = pickle.loads(data)\n",
-    "#             for i in range(len(data)):\n",
-    "#                 available_files.append(data[i])\n",
-    "                    \n",
-    "        def validateLogin(usr, password):\n",
-    "            global username, available_files\n",
-    "#             print(\"Hello Everyone\")\n",
-    "            available_files = []\n",
+    "                            \n",
+    "        def validating_client():\n",
+    "            print(\"Please enter your username:\")\n",
+    "            username = input()\n",
     "\n",
-    "\n",
-    "            for i in range(len(validation[\"username\"])):\n",
-    "                if validation.loc[i][0] == usr:\n",
-    "                    if validation.loc[i][1] == password:\n",
-    "                        print(\"Done\")\n",
-    "                        output = \"success\"\n",
-    "                        username = usr\n",
-    "#                         readFiles()\n",
-    "                    else:\n",
-    "                        output = \"not success\"\n",
-    "                        print(\"wrong password\")\n",
-    "                    break\n",
-    "            if output == \"success\":\n",
+    "            print(\"Please enter your password:\")\n",
+    "            password = input()\n",
+    "            \n",
+    "            features = []\n",
+    "            features.append(\"validation\")\n",
+    "            features.append(username)\n",
+    "            features.append(password) \n",
+    "    #         validateLogin(usr, password)\n",
+    "            features = pickle.dumps(features)\n",
+    "            client.send(features)\n",
+    "            data = client.recv(client_buffer)\n",
+    "            valid = data.decode()\n",
+    "            return valid\n",
+    "        \n",
+    "        def check_validation(valid):\n",
+    "            if valid == \"success\":\n",
     "                showmenu()\n",
+    "                result = \"valid\"\n",
     "            else:\n",
-    "                print(output)\n",
-    "                print(\"Login Failed. Please Retry\")           \n",
-    "                    \n",
-    "        print(\"Please enter your username:\")\n",
-    "        usr = input()\n",
-    "\n",
-    "        print(\"Please enter your password:\")\n",
-    "        password = input()\n",
-    "        validateLogin(usr, password)\n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "#             data = client.recv(client_buffer).decode()\n",
-    "#             if \"@\" in data:\n",
-    "#                 operation, msg = data.split(\"@\")\n",
-    "#                 print(operation, msg)\n",
-    "#                 if operation.lower().strip() == \"disconnect\":\n",
-    "#                     print(f\"{msg}\")\n",
-    "#                     print(f\"Disconnected from the server\")\n",
-    "#                     client.close()\n",
-    "#                     break\n",
-    "#                 elif operation.lower().strip() == \"ack\":\n",
-    "#                     print(f\"{msg}\")\n",
-    "#                 elif operation.lower().strip() == \"create\":\n",
-    "#                     print(f\"{msg}\")\n",
-    "#                     f_name = input()\n",
-    "#                     f_name = f_name.split(\" \")\n",
-    "#                     operation = f_name[0]\n",
-    "#                     client.send(operation.encode())\n",
-    "#             else:\n",
-    "#                 print(data)\n",
-    "\n",
-    "#             print(\"Username\")\n",
-    "#             username = input()              "
+    "                print(valid)\n",
+    "                print(\"Login Failed. Please Retry\")\n",
+    "                result = \"invalid\"\n",
+    "            return result\n",
+    "        \n",
+    "        \n",
+    "###########################################################################\n",
+    "###########         Main working starts from here             #############\n",
+    "###########################################################################\n",
+    "        \n",
+    "        result = \"invalid\"\n",
+    "        while result == \"invalid\":\n",
+    "            valid = validating_client()\n",
+    "            result = check_validation(valid)\n",
+    "            "
    ]
   },
   {
@@ -422,35 +388,15 @@
       "dhruv\n",
       "Please enter your password:\n",
       "dhruvjpatel68!\n",
-      "Done\n",
-      "Hello There!\n",
-      "Enter the operation to be performed\n",
-      "=> createdir\n",
-      "\n",
-      "Please enter directory name\n",
-      "Dhruv\n",
-      "['createdir', 'dhruv', 'Dhruv']\n",
-      "ACK@Directory Created\n",
-      "\n",
-      "Hello There!\n",
-      "Enter the operation to be performed\n",
-      "=> createfile\n",
-      "\n",
-      "Please enter directory name to create file\n",
-      "Dhruv\n",
-      "Please enter file name\n",
-      "djp\n",
-      "ACK@File Created\n",
-      "\n",
       "Hello There!\n",
       "Enter the operation to be performed\n",
       "=> deletefile\n",
       "\n",
       "Please enter directory name to delete a file\n",
-      "Dhruv\n",
+      "common\n",
       "Please enter file name to delete it\n",
-      "djp\n",
-      "ACK@File Created\n",
+      "payodhifile\n",
+      "You are not the owner of this file\n",
       "\n",
       "Hello There!\n",
       "Enter the operation to be performed\n"
@@ -474,6 +420,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ffc5d80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18e64c78",
    "metadata": {},
    "outputs": [],
    "source": []
