--- a/server3/Server3.ipynb
+++ b/server3/Server3.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.149.56\n"
+      "10.200.133.129\n"
      ]
     }
    ],
@@ -106,11 +106,11 @@
     "            #print(data[2])\n",
     "            lock.acquire()\n",
     "            dirname = data[2]\n",
-    "            user = data[1]\n",
-    "            if os.path.exists('files/'+user) == False:\n",
-    "                os.mkdir('files/'+user)\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname) == False:\n",
-    "                os.mkdir('files/'+user+\"/\"+dirname)\n",
+    "#             user = data[1]\n",
+    "#             if os.path.exists('files/'+user) == False:\n",
+    "#                 os.mkdir('files/'+user)\n",
+    "            if os.path.exists('files/'+dirname) == False:\n",
+    "                os.mkdir('files/'+dirname)\n",
     "            conn.send(\"ACK@Directory Created\".encode(encoding_format))\n",
     "            print(\"Directory Created: \"+dirname)\n",
     "            lock.release()\n",
@@ -122,11 +122,11 @@
     "        \n",
     "        if operation.lower().strip() == \"createfile\":\n",
     "            lock.acquire()\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
     "            filename = data[3]\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname):\n",
-    "                open('files/'+user+\"/\"+dirname+\"/\"+filename, 'w').close()\n",
+    "            if os.path.exists('files/'+dirname):\n",
+    "                open('files/'+dirname+\"/\"+filename, 'w').close()\n",
     "                conn.send(\"ACK@File Created\".encode())\n",
     "                print(\"File Created: \"+filename)\n",
     "            else:\n",
@@ -142,13 +142,13 @@
     "        \n",
     "        if operation.lower().strip() == \"deletefile\":\n",
     "            lock.acquire()\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname):\n",
-    "                if os.path.isdir('files/'+user+\"/\"+dirname):\n",
-    "                    shutil.rmtree('files/'+user+\"/\"+dirname)\n",
-    "                if os.path.isfile('files/'+user+\"/\"+dirname):    \n",
-    "                    os.remove('files/'+user+\"/\"+dirname)\n",
+    "            if os.path.exists('files/'+dirname):\n",
+    "                if os.path.isdir('files/'+dirname):\n",
+    "                    shutil.rmtree('files/'+dirname)\n",
+    "                if os.path.isfile('files/'+dirname):    \n",
+    "                    os.remove('files/'+dirname)\n",
     "                conn.send(\"ACK@Given file deleted\".encode())\n",
     "                print(\"Given file deleted: \"+dirname)\n",
     "            else:\n",
@@ -164,12 +164,12 @@
     "        \n",
     "        if operation.lower().strip() == \"writefile\":\n",
     "            lock.acquire()\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
     "            filename = data[3]\n",
     "            encrypt = data[4]\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname+\"/\"+filename):\n",
-    "                f = open('files/'+user+\"/\"+dirname+\"/\"+filename, \"a\")\n",
+    "            if os.path.exists('files/'+dirname+\"/\"+filename):\n",
+    "                f = open('files/'+dirname+\"/\"+filename, \"a\")\n",
     "                f.write(encrypt)\n",
     "                f.close()\n",
     "                conn.send(\"ACK@file data saved at server\".encode())\n",
@@ -188,12 +188,12 @@
     "        \n",
     "        if operation.lower().strip() == \"renamefile\":\n",
     "            lock.acquire()\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
     "            oldname = data[3]\n",
     "            newname = data[4]\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname+\"/\"+oldname):\n",
-    "                os.rename('files/'+user+\"/\"+dirname+\"/\"+oldname,'files/'+user+\"/\"+dirname+\"/\"+newname)\n",
+    "            if os.path.exists('files/'+dirname+\"/\"+oldname):\n",
+    "                os.rename('files/'+dirname+\"/\"+oldname,'files/'+dirname+\"/\"+newname)\n",
     "                conn.send(\"ACK@file rename at server\".encode())\n",
     "                print(\"file rename at server: \"+newname)\n",
     "            else:\n",
@@ -207,7 +207,7 @@
     "        #############################################################\n",
     "        \n",
     "        if operation.lower().strip() == \"listfiles\":\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            file_list = []\n",
     "            file_list.append(\"ACK@\")\n",
     "            for root, dirs, directory in os.walk('files/'+user):\n",
@@ -223,12 +223,12 @@
     "        ################################################################\n",
     "        \n",
     "        if operation.lower().strip() == \"readfile\":\n",
-    "            user = data[1]\n",
+    "#             user = data[1]\n",
     "            dirname = data[2]\n",
     "            filename = data[3]\n",
     "            features = {}\n",
-    "            if os.path.exists('files/'+user+\"/\"+dirname+\"/\"+filename):\n",
-    "                with open('files/'+user+\"/\"+dirname+\"/\"+filename) as f:\n",
+    "            if os.path.exists('files/'+dirname+\"/\"+filename):\n",
+    "                with open('files/'+dirname+\"/\"+filename) as f:\n",
     "                    dataset = f.read()\n",
     "                f.close()\n",
     "                features['status'] = \"correct\"\n",
@@ -332,15 +332,32 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_28584/2519402377.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_22504/1085672972.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.133.129', 54760)\n",
+      "['writefile', 'dhruv', 'common', 'djp', 'Hi there']\n",
+      "writefile\n",
+      "Total Active connections 6\n",
+      "file data saved at server: djp\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Exception in thread Thread-9:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_28584/2519402377.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_22504/1085672972.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -348,79 +365,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.200.149.56', 54463)\n",
-      "['createdir', 'dhruv', 'Dhruv']\n",
-      "createdir\n",
+      "[Connected] Connection Established with ('10.200.133.129', 60524)\n",
+      "['writefile', 'dhruv', 'common', 'djp', 'Hi this is Dhruv']\n",
+      "writefile\n",
       "Total Active connections 6\n",
-      "Directory Created: Dhruv\n",
-      "[Connected] Connection Established with ('10.200.149.56', 54466)Total Active connections 6\n",
-      "['createdir', 'dhruv', 'Dhruv']\n",
-      "createdir\n",
-      "\n",
-      "Directory Created: Dhruv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-10:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_28584/2519402377.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n",
-      "Exception in thread Thread-11:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_28584/2519402377.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Connected] Connection Established with ('10.200.149.56', 54494)\n",
-      "['createfile', 'dhruv', 'Dhruv', 'djp']\n",
-      "createfile\n",
-      "Total Active connections 6\n",
-      "File Created: djp\n",
-      "[Connected] Connection Established with ('10.200.149.56', 54497)Total Active connections 6\n",
-      "\n",
-      "['createfile', 'dhruv', 'Dhruv', 'djp']\n",
-      "createfile\n",
-      "File Created: djp\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-12:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_28584/2519402377.py\", line 14, in perform_operation\n",
-      "EOFError: Ran out of input\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Connected] Connection Established with ('10.200.149.56', 54550)Total Active connections 6\n",
-      "['deletefile', 'dhruv', 'Dhruv/djp']\n",
-      "deletefile\n",
-      "\n",
-      "Given file deleted: Dhruv/djp\n"
+      "file data saved at server: djp\n"
      ]
     }
    ],
